# High-Performance-Computing-2024

./: .gitignore  LICENSE  Makefile  README.md  install_armadillo.sh  install_openblas.sh  matrix.txt  midsem_21AE10039.cpp  sourcevec.txt
Assignment_1/: Assignment_I_HPSC.docx  gauss_seidel.cpp  jacobi.cpp  sor.cpp
Assignment_1/finite_difference/: A.txt  B.txt  heat.cpp  run.sh  solution_gauss_seidel.txt  solution_jacobi.txt
Assignment_1/finite_element/: Fvec.txt  Kmat.txt  fem.c  solution.txt  solutiongs.txt  unstrucquad.msh  unstrucquad_elements.txt  unstrucquad_nodes.txt
Assignment_1/finite_element/GMSH/Gmsh/: gmsh download link.docx
Assignment_1/finite_element/OneDrive_1_8-20-2024/Gmsh/: GmshGeometry&MeshCreation.docx  gmsh conditions impose.docx
Assignment_1/finite_element/gmsh-3.0.6-Windows64/gmsh-3.0.6-Windows64/: raw.msh
Assignment_2/: CMakeLists.txt  HPSC  generateFDMLaplacian.cpp  main.cpp
Assignment_2/matrix/include/: densematrix.hpp  loadvector.hpp  matrix.hpp
Assignment_2/matrix/src/: densematrix.cpp  loadvector.cpp
Assignment_2/solvers/include/: jacobi.hpp
src/: CMakeCache.txt  CMakeLists.txt  HPSC  Makefile  README.md  cmake_install.cmake  main.cpp  matrix.txt  sourcevec.txt
src/libraries/armadillo/src/: ArmadilloConfig.cmake  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
src/libraries/armadillo/src/tests1/: CTestTestfile.cmake  Makefile  cmake_install.cmake  smoke_test
src/libraries/armadillo/src/tmp/include/armadillo_bits/: config.hpp
src/matrix/: README.md  diagonal_preconditioning.hpp  matrix.hpp
src/solvers/: README.md  jacobi.cpp  jacobi.hpp  preconditioner.hpp
